--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 body{
   margin:0;
   padding:0;
+  background-color: #999;/*bu renk kodu */
 }
-/*Bu not için koda dahil olmaz
+/*
 
  */
  .timur{
